2004-12-22 zunda <zunda at freeshell.org>
	* misc/style/emptdiary/emptdiary_style.rb: body_to_html defined, thanks to dai <d+r at vdr.jp>.

2004-12-01 zunda <zunda at freeshell.org>
	* skel/tdiary.rconf: bug fix - could not saveconf unless icon and description are set

2004-12-01 zunda <zunda at freeshell.org>
	* plugin/00default.rb, plugin/ja/00default.rb: added icon_tag and description_tag

2004-11-29 zunda <zunda at freeshell.org>
	* tdiary.rb, skel/tdiary.rconf, plugin/00default.rb, plugin/{ja,en,zh}/00default.rb: added @conf.icon and @conf.description

2004-11-05 MoonWolf <moonwolf@moonwolf.com>
	* tdiary/tdiary_style.rb: XML-RPC API support
	* misc/style/emptdiary: XML-RPC API support
	* misc/style/etdiary: XML-RPC API support
	* misc/style/rd: XML-RPC API support
	* misc/style/wiki: XML-RPC API support

2004-11-04 MoonWolf <moonwolf@moonwolf.com>
	* tdiary.rb: method visibility change.

2004-09-24 Fri UECHI Yasumasa <uechi@potaway.net>
	* rd_style.rb: fix tainted name space of RD Headline class. Thanks Shugo Maeda <maeda@shugo.net>. 

2004-08-08 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: TDiaryCategoryView's @last_modified changed to Time.now from Time.at(0). Thanks MATSUOKA Kohei <kohei@machu.jp>.

2004-07-18 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb, tdiary/defaultio.rb: delete dispensable data dir and cache.

2004-07-01 TADA Tadashi <sho@spc.gr.jp>
	* tdiary_style.rb: implement body_to_html method.

2004-06-28 Junichiro Kita <kita@kitaj.no-ip.com>
	* misc/i18n/tdiary.conf.sample-en: fix typo. thanks to jfkimura@yahoo.co.jp

2004-06-27 TADA Tadashi <sho@spc.gr.jp>
	* release 2.0.0.

2004-06-18 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: deny robots when update modes.

2004-06-16 TADA Tadashi <sho@spc.gr.jp>
	* add zh (Traditional Chinese) language resources. thanks Hiroshi Yui <thinker60@mail2000.com.tw>.

2004-06-15 Tue UECHI Yasumasa <uechi@potaway.net>
	* rd_style.rb: remove <p> tags in manufacture(*_to_html) only subtitles is given.